check_errors.log
warning: use of deprecated trait `static_gen::StaticNode`: Legacy trait kept for backward compatibility. Use StaticAxon instead.
  --> core\src\lib.rs:17:71
   |
17 | ...t, StaticManifest, StaticNode, StaticStateEntry,
   |                       ^^^^^^^^^^
   |
   = note: `#[warn(deprecated)]` on by default

warning: use of deprecated function `static_gen::read_json_file`: Internal API
  --> core\src\lib.rs:18:5
   |
18 |     read_json_file, write_json_file,
   |     ^^^^^^^^^^^^^^

warning: use of deprecated function `static_gen::write_json_file`: Internal API
  --> core\src\lib.rs:18:21
   |
18 |     read_json_file, write_json_file,
   |                     ^^^^^^^^^^^^^^^

warning: `ranvier-core` (lib) generated 3 warnings
    Checking ranvier-session v0.7.0 (F:\project\ranvier\ranvier-workspace\ranvier\extensions\session)
error[E0432]: unresolved import `bytes`
 --> extensions\session\src\layer.rs:2:5
  |
2 | use bytes::Bytes;
  |     ^^^^^ use of unresolved module or unlinked crate `bytes`
  |
  = help: if you wanted to use a crate named `bytes`, use `cargo add bytes` to add it to your `Cargo.toml`

error[E0432]: unresolved import `http_body_util`
 --> extensions\session\src\layer.rs:4:5
  |
4 | use http_body_util::Full;
  |     ^^^^^^^^^^^^^^ use of unresolved module or unlinked crate `http_body_util`
  |
  = help: if you wanted to use a crate named `http_body_util`, use `cargo add http_body_util` to add it to your `Cargo.toml`

error[E0616]: field `id` of struct `SessionInner` is private
  --> extensions\session\src\memory.rs:44:36
   |
44 |         store.insert(session_inner.id.clone(), session_inner);
   |                                    ^^ private field

error[E0282]: type annotations needed
   --> extensions\session\src\layer.rs:109:17
    |
109 |             let mut response = inner.call(req).await?;
    |                 ^^^^^^^^^^^^
...
116 |                 response.headers_mut().append(
    |                 -------- type must be known at this point
    |
help: consider giving `response` an explicit type
    |
109 |             let mut response: /* Type */ = inner.call(req).await?;
    |                             ++++++++++++

Some errors have detailed explanations: E0282, E0432, E0616.
For more information about an error, try `rustc --explain E0282`.
error: could not compile `ranvier-session` (lib) due to 4 previous errors
